@@ -1,5 +1,10 @@
 2007-08-11  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (conv_from_widget_cb): make sure we have a
+	selection before trying to get the data (bug #465431)
+
+2007-08-11  Jens Granseuer  <jensgr@gmx.net>
+
 	* theme-installer.c: (gnome_theme_install_from_uri): fix leak
 
 2007-08-09  Jens Granseuer  <jensgr@gmx.net>
